# learn-fastapi

./: .gitignore  README.md  pyproject.toml
app/: controllers.py  create_table.py  db.py  models.py  mycalendar.py  run.py  urls.py
app/templates/: admin.html  detail.html
