[tool.poetry]
name = "learn-fastapi"
version = "0.1.0"
description = ""
authors = ["shunk-py <auau3700@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.54.1"
uvicorn = "^0.11.5"
sqlalchemy = "^1.3.16"
jinja2 = "^2.11.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
